基本のレイアウトをdivで作る

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <section>
-    <div class="image">image</div>
-    <div class="text">text</div>
-    <aside>ad</aside>
-  </section>
+  <div id="header"></div>
+
+  <div id="main-pannel">
+    <div id="left"></div>
+    <div id="right">
+      <div id="upper"></div>
+      <div id="lower"></div>
+    </div>
+  </div>
+  <div id="main-content"></div>
+  
+  <div id="footer"></div>
 </body>
 </html>
